# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import carsRouter from "./cars";
+import bookingsRouter from "./bookings";
+import availabilityRouter from "./availability";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(carsRouter);
+router.use(bookingsRouter);
+router.use(availabilityRouter);
+router.use(adminRouter);
 
 export default router;
